# python-daraja

./: CONTRIBUTING.md  README.md  setup.cfg
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
python_daraja/: payment.py
