[metadata]
name = python-daraja
version = 0.0.0
author = William Otieno
author_email = jimmywilliamotieno@gmail.com
description = Python Wrapper for interacting with the Daraja MPESA Payments API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WilliamOtieno/python-daraja
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = requests;
python_requires = >=3.7
include_package_data  = True
